[package]
name = "embed-wasm"
version = "0.1.1"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"
description = "serve embedded cargo-web wasm build ouput from native binaries"
license = "MIT"
keywords = ["web-programming", "wasm"]
documentation = "https://inanna-malick.github.io/embed-wasm/embed_wasm/"
repository = "https://github.com/inanna-malick/embed-wasm"
readme = "README.md"

[dependencies]
phf = "0.8.0"
headers = "0.3.1"
mime_guess = "2.0"
hyper = "0.13.2"